Fix: Verzörung nach Start

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       - "0.0.0.0:7700:7700"
     networks:
       - meilisearch-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:7700/health"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   tika:
     image: apache/tika:latest
@@ -35,8 +40,10 @@ services:
       - ${MD_FILES}:/data/md_files
       - ${AUDIO_FILES}:/data/audio_files
     depends_on:
-      - meilisearch
-      - tika
+      meilisearch:
+        condition: service_healthy
+      tika:
+        condition: service_started
     networks:
       - meilisearch-network
 
