Löschung von Dateien erkennen und konfigurierbare Meilisearch-Version

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 MEILI_MASTER_KEY=dein-sicherer-key-hier
+MEILI_VERSION=latest
 MD_FILES=/dein/erster/pfad
 AUDIO_FILES=/dein/zweiter/pfad
+CLEANUP=false
