--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       MEILI_MASTER_KEY: ${MEILI_MASTER_KEY}
       MEILI_ENV: development
       MEILI_HTTP_ADDR: 0.0.0.0:7700
+      MEILI_EXPERIMENTAL_REDUCE_INDEXING_MEMORY_USAGE: true
+      MEILI_MAX_INDEXING_MEMORY: 0
+      MEILI_MAX_INDEXING_THREADS: 1
     volumes:
       - ./meili_data:/meili_data
     ports:
